# JANGGI_DOT_COM

./: .gitignore  GIBO_PARSING_TEST.md  README.md  api.py  main.py  pyproject.toml  test_gibo_parsing.py  test_single_gibo.py
docs/: README.md  how-to-use-models.md  improvement-suggestions.md  rule-en.md  rule-kr.md  training-guide.md
frontend/: README.md  index.html  package-lock.json  pnpm-lock.yaml
gibo/: 1937년_동아일보_주최_金漢英_崔夏泳.gib  2007아마최강전.gib  2008아마최강전.gib  2008한게임장기최고수전.gib  2008한게임장기큰잔치고급부본선.gib  2009아마최강전.gib  2010 한게임 장기 그랑프리.gib  2010KBS추석장기왕전.gib  2010년 명인장기 전국 토너먼트.gib  2010한게임프로리그.gib  2011_설특집_kbs장기왕전_김경중_九단_對_김정수_初단.gib  2011추석KBS장기왕전.gib  2011한게임장기그랑프리.gib  2012 kbs 설특집 장기왕전.gib  2012 秋夕특집 kbs장기왕전.gib  2012 한게임 장기 그랑프리 총보.gib  2013 설특집 kbs 장기왕전.gib  2013 추석특집 kbs 장기왕전.gib  2015 추석특집 장기왕전 김철 六단 vs 김정수 四단.gib  2015설장기왕전.gib  甲午年 설날 KBS장기왕전 棋譜.gib  네오장기.gib  넷마블고수대국.gib  대장군전.gib  매일신보.gib  설_특집_kbs_장기왕전.gib  설특집장기왕전결승.gib  양귀마면졸주는변화수.gib  엠겜고수기보100개.gib  이일훈프로면상.gib  제 4ȸ 챔피언전 해설총보.gib  제1회친선대회.gib  제1회한게임장기챔피언스리그.gib  제2회KBS장기왕전.gib  제2회대회 결승(하남시짱-오리온1).gib  제2회한게임장기챔피언스리그.gib  제3회KBS장기왕전.gib  제3회한게임장기챔피언스리그.gib  제4회KBS장기왕전.gib  제4회_챔피언스리그.gib  (+54 more)
janggi/: __init__.py  bitboard.py  board.py  engine.py  multiplayer.py  nnue.py  nnue_torch.py  opening_book.py  zobrist.py
models/: nnue_smart_model.json.v1
scripts/: check_model_usage.py  deploy_ec2.sh  example_use_model.py  smart_train.py  test_api_model.py  train_nnue.py  train_nnue_gibo.py  train_nnue_gpu.py  train_nnue_hybrid.py
static/: index.html  multiplayer.html
tests/: __init__.py  (+5 more)
(+48 files in other folders)
