[project]
name = "janggi-ai"
version = "0.1.0"
description = "Korean Janggi AI engine based on NNUE architecture"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]
dev = [
    "torch>=2.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["janggi"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

